@@ -18,3 +18,4 @@ After=getty@tty1.service plymouth-quit.service
 ExecStart=/etc/X11/prefdm -nodaemon
 Restart=always
 RestartSec=0
+IgnoreSIGPIPE=no
